Solve 02-flex-header using nested flex layouts & justify/align props

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
 }
 
 .logo {
@@ -9,11 +13,21 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  text-align: center;
+}
+
+ul {
+  padding-left: 0px;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  gap: 10px;
+  justify-content: space-evenly;
+  padding:0;
+  margin: 0;
 }
 
 a {
